--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "standard-version",
-  "version": "1.0.2-beta.1",
+  "version": "1.0.2",
   "description": "a test repo of standard-version",
   "main": "index.js",
   "scripts": {
