--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "standard-version",
-  "version": "1.1.2",
+  "version": "1.1.3-beta.0",
   "description": "a test repo of standard-version",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "release-beta": "standard-version -- --prerelease beta"
+    "release-beta": "standard-version --prerelease beta"
   },
   "repository": {
     "type": "git",
