--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "standard-version",
-  "version": "1.1.3-beta.4",
+  "version": "1.1.4-beta.0",
   "description": "a test repo of standard-version",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "release-beta": "standard-version --prerelease beta"
+    "test2": "echo \"Error: no test2 specified\" && exit 2",
+    "release-beta": "standard-version --prerelease beta && npm run test2",
+    "release": "standard-version --release"
   },
   "repository": {
     "type": "git",
