--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "standard-version",
-  "version": "1.1.4-beta.0",
+  "version": "1.1.4",
   "description": "a test repo of standard-version",
   "main": "index.js",
   "scripts": {
