--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/xiexuan-star/standard-version#readme",
   "dependencies": {
+    "cnhis-design-vue": "3.1.10",
     "standard-version": "^9.5.0"
   },
   "devDependencies": {
